[gd_scene load_steps=14 format=3 uid="uid://ccs08mpcqrtv"]

[ext_resource type="Script" path="res://src/game/levels/LevelDefault.gd" id="1_0n8ux"]
[ext_resource type="AudioStream" uid="uid://b6n2ah3hmubjo" path="res://assets/sound/bgm/Tracks/Fx 1.ogg" id="2_3htwu"]
[ext_resource type="AudioStream" uid="uid://y0vysv5wqli1" path="res://assets/sound/bgm/Tracks/Fx 3.ogg" id="3_6j4et"]
[ext_resource type="AudioStream" uid="uid://0ijgx0332hb" path="res://assets/sound/bgm/Tracks/Dark 3.ogg" id="4_edovi"]
[ext_resource type="AudioStream" uid="uid://dqyjpkaxcyia2" path="res://assets/sound/bgm/Tracks/Action 3.ogg" id="5_n332a"]
[ext_resource type="PackedScene" uid="uid://cpymripcqph0" path="res://src/game/ui/ui_menus.tscn" id="6_38gp6"]
[ext_resource type="PackedScene" uid="uid://chkhrauq0xab" path="res://src/environment/background/mountain_background.tscn" id="10_234xe"]
[ext_resource type="PackedScene" uid="uid://cpbfvnk8phjxc" path="res://assets/textures/tileset/levels/TileMapLvl02.tscn" id="11_5i7va"]
[ext_resource type="FontFile" uid="uid://dy5sekvp82oi3" path="res://assets/fonts/Mystery Font(1).ttf" id="12_pkk88"]
[ext_resource type="Texture2D" uid="uid://dcvwibiecd02g" path="res://assets/textures/tutorial/tutorial_spikes.png" id="13_vhx05"]
[ext_resource type="Texture2D" uid="uid://cqu8phjmrwdjx" path="res://assets/textures/tutorial/tutorial_jump.png" id="14_1kgs2"]
[ext_resource type="PackedScene" path="res://src/environment/Goal.tscn" id="15_kpsjq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_n55b7"]
size = Vector2(1074, 534)

[node name="Level02" type="Node"]
script = ExtResource("1_0n8ux")
victory_music = ExtResource("2_3htwu")
death_music = ExtResource("3_6j4et")
default_music = ExtResource("4_edovi")
boss_music = ExtResource("5_n332a")

[node name="BackgroundMusic" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_edovi")
autoplay = true
bus = &"BackgroundLevel"

[node name="MenuLayer" parent="." instance=ExtResource("6_38gp6")]

[node name="BackgroundLayer" type="Node" parent="."]

[node name="MountainBackground" parent="BackgroundLayer" instance=ExtResource("10_234xe")]

[node name="Environment" type="Node2D" parent="."]
position = Vector2(-3006, -859)

[node name="Tilesets" type="Node2D" parent="Environment"]

[node name="TileMapLvl00" parent="Environment/Tilesets" instance=ExtResource("11_5i7va")]
position = Vector2(6012.07, 160.422)

[node name="Objects" type="Node2D" parent="Environment"]
z_as_relative = false

[node name="Tutorial" type="Node2D" parent="Environment/Objects"]

[node name="AttackTutorial" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = -2424.0
offset_top = 4159.0
offset_right = -1482.0
offset_bottom = 4213.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1

[node name="UtilityTutorial" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = 2127.0
offset_top = 849.0
offset_right = 2343.0
offset_bottom = 903.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32

[node name="Movement" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = 1270.0
offset_top = 652.0
offset_right = 1490.0
offset_bottom = 719.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32
text = "TUTO_01"

[node name="Jump" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = 1504.0
offset_top = 650.0
offset_right = 1684.0
offset_bottom = 704.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32
text = "TUTO_02"

[node name="Label2" type="Label" parent="Environment/Objects/Tutorial"]
offset_left = 2611.0
offset_top = 1259.0
offset_right = 2791.0
offset_bottom = 1313.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32
text = "TUTO_05"

[node name="Label3" type="Label" parent="Environment/Objects/Tutorial"]
offset_left = 2667.0
offset_top = 1545.0
offset_right = 2847.0
offset_bottom = 1599.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32
text = "TUTO_06"

[node name="Rope" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = 3399.0
offset_top = 1546.0
offset_right = 3635.0
offset_bottom = 1600.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32

[node name="Rope Jump" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = 3471.0
offset_top = 1453.0
offset_right = 3707.0
offset_bottom = 1507.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32
text = "
"

[node name="Interact" type="Label" parent="Environment/Objects/Tutorial"]
unique_name_in_owner = true
offset_left = 3385.0
offset_top = 1658.0
offset_right = 3737.0
offset_bottom = 1712.0
scale = Vector2(0.46, 0.46)
theme_override_fonts/font = ExtResource("12_pkk88")
theme_override_font_sizes/font_size = 32

[node name="Sprite2D" type="Sprite2D" parent="Environment/Objects/Tutorial"]
position = Vector2(1683, 695)
texture = ExtResource("13_vhx05")

[node name="Sprite2D2" type="Sprite2D" parent="Environment/Objects/Tutorial"]
position = Vector2(2698, 1415)
texture = ExtResource("14_1kgs2")

[node name="Goal" parent="Environment/Objects" instance=ExtResource("15_kpsjq")]
z_index = 0
position = Vector2(9678, 894)

[node name="Goal2" parent="Environment/Objects" instance=ExtResource("15_kpsjq")]
z_index = 0
position = Vector2(12588, 156)

[node name="Chests" type="Node2D" parent="Environment/Objects"]

[node name="Entities" type="Node2D" parent="Environment"]
z_as_relative = false

[node name="BossArea" type="Area2D" parent="Environment"]
position = Vector2(3492, 1690)
collision_layer = 0
collision_mask = 512
monitoring = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Environment/BossArea"]
position = Vector2(-43, -109)
shape = SubResource("RectangleShape2D_n55b7")

[node name="BossCamera" type="Camera2D" parent="Environment/BossArea"]
unique_name_in_owner = true
position = Vector2(-43, -112)
enabled = false
zoom = Vector2(0.745, 0.745)

[node name="DefaultLighting" type="CanvasModulate" parent="."]
position = Vector2(527, 132)
color = Color(0.430057, 0.430057, 0.430057, 1)

[node name="SpawnPoint" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(4084, -232)

[connection signal="next_level_requested" from="MenuLayer" to="." method="_on_level_won"]
[connection signal="player_death" from="MenuLayer" to="." method="_on_player_death"]
[connection signal="player_victory" from="MenuLayer" to="." method="_on_player_victory"]
[connection signal="restart_requested" from="MenuLayer" to="." method="_on_restart_requested"]
[connection signal="return_requested" from="MenuLayer" to="." method="_on_return_requested"]
[connection signal="area_entered" from="Environment/BossArea" to="." method="_on_boss_area_entered"]
[connection signal="area_exited" from="Environment/BossArea" to="." method="_on_boss_area_exited"]
[connection signal="body_entered" from="Environment/BossArea" to="." method="_on_boss_area_entered"]
[connection signal="body_exited" from="Environment/BossArea" to="." method="_on_boss_area_exited"]
